# chad_nauseam_experiments

./: README.md
francophonic/: todo.md
francophonic/cn_experiments/: App.tsx  app.json  package-lock.json  package.json
francophonic/cn_experiments/src/: ReviewScreen.tsx  styles.tsx
francophonic/cn_experiments/src/components/: Button.tsx  Container.tsx
francophonic/cn_experiments/src/data/: sentenceAudio.tsx  sentencedictionary.tsx  wordAssociations.tsx  worddictionary.tsx
francophonic/francophonic/: App.tsx  package.json
francophonic/francophonic-2/: App.tsx  app.json  package-lock.json  package.json
francophonic/francophonic-2/src/: mainpage.tsx  questionspage.tsx  styles.tsx
francophonic/francophonic-2/src/data/: sentenceAudio.tsx  worddictionary.tsx
francophonic/francophonic/app/: problemTypes.tsx  store.tsx  themes.tsx
francophonic/francophonic/app/actions/: index.ts
francophonic/francophonic/app/components/: home.tsx  rootstack.tsx  sentencePractice.tsx  sentenceWord.tsx
francophonic/francophonic/app/data/: grammarRules.tsx  permutationRules.tsx  sentenceList.tsx  wordList.ts
francophonic/francophonic/app/reducers/: index.ts
francophonic/francophonic/app/utils/: sentenceGrading.tsx  sentenceUtils.tsx
francophonic/francophonic/tests/: App.test.tsx  grammarRules.test.tsx  sentenceGrading.test.tsx
francophonic/sources/: .gitignore
francophonic/sources/books/alcatraz/: 1.txt  2.txt  3.txt  4.txt
francophonic/sources/books/hp/: hp1.txt  hp2.txt  hp3.txt  hp4.txt  hp5.txt  hp6.txt  hp7.txt
francophonic/sources/books/inner_french_podcast/: ep01.txt  ep02.txt  ep03.txt  ep04.txt  ep05.txt  ep06.txt  ep07.txt  ep08.txt  ep09.txt  ep10.txt  ep11.txt  ep12.txt  ep13.txt  ep14.txt  ep15.txt  ep16.txt  ep17.txt  ep18.txt  ep19.txt  ep20.txt  ep21.txt  ep22.txt  ep23.txt  ep24.txt  ep25.txt  ep26.txt  ep27.txt  (+49 more)
francophonic/sources/handmade-dictionaries/: all_runner.py  auto_sentence_translator.py  data_mover.py  get_conjugations.py  handmade_dictionary.yaml  handmade_dictionary_combiner.py  handmade_dictionary_template_generator.py  pyproject.toml  sentence_lister.py  sentencedictionary.yaml  sources_analysis.py  test.html  translations.yaml  tts_generator.py  usable_sentences.txt  utils.py  word_aggregator.py  word_associations.yaml  worddictionary.yaml
francophonic/sources/handmade-dictionaries/processor/: all_runner.py  auto_sentence_translator.py  data_mover.py  get_conjugations.py  handmade_dictionary_combiner.py  handmade_dictionary_template_generator.py  print_stats.py  sentence_associations.py  sentence_lister.py  sentence_nlp_gen.py  sources_analysis.py  tts_generator.py  utils.py  word_aggregator.py
francophonic/sources/handmade-dictionaries/work/: Untitled-1.json  Untitled-3.yaml  Untitled-4.yaml  Untitled-5.yaml  Untitled-6.yaml  Untitled.yaml  frenchsentences1024.txt  frenchsentences128.txt  frenchsentences2048.txt  frenchsentences256.txt  frenchsentences4096.txt  frenchsentences512.txt  frenchsentences8192.txt  frenchwords.txt  frenchwords1024.txt  frenchwords128.txt  frenchwords2048.txt  frenchwords256.txt  frenchwords4096.txt  frenchwords512.txt  frenchwords8192.txt  nlp_sentences.yaml  untitled-7.yaml  usable_sentences.txt
francophonic/sources/permutations/: permutations.json
francophonic/sources/sentence-cross-referencer/: .eslintcache  package-lock.json  package.json
(+14 files in other folders)
