[tool.poetry]
name = "processor"
version = "0.1.0"
description = ""
authors = ["Andre Popovitch <andre@popovit.ch>"]

[tool.poetry.dependencies]
python = "~3.8.0"
PyYAML = "^5.3"
requests = "^2.24"
beautifulsoup4 = "^4.9"
google-cloud-translate = "^3.0"
google-cloud-texttospeech = "^2.2"
safer = "^4.3"
colorama = "^0.4"
pyperclip = "^1.8"
spacy-nightly = "3.0.0rc2"
pycontractions = "^2.0"
fr-core-news-lg = {url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_lg-3.0.0a0/fr_core_news_lg-3.0.0a0.tar.gz"}
# I should probably start using en_core_web_trf eventually, but it wasn't seeming to get installed properly :/ 
# also I'm worried that using news for french and web for eng is going to cause problems 
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.0.0a0/en_core_web_lg-3.0.0a0.tar.gz"} 

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
process = "processor.all_runner:main"
template = "processor.handmade_dictionary_template_generator:main"
conjugate = "processor.get_conjugations:main"

translate = "processor.auto_sentence_translator:main"
generate_tts = "processor.tts_generator:main"
move_data = "processor.data_mover:main"
stats = "processor.print_stats:print_stats"